# logomaker

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
logomaker/: Logo.py  __init__.py  colors.py  error_handling.py  examples.py  matrix.py
logomaker/src/: Glyph.py  Logo.py  colors.py  validate.py
tutorials/: 6_glyph_objects.ipynb
