[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "logomaker"
version = "0.8.4"
description = "Package for making Sequence Logos"
readme = "README.md"
authors = [
    {name = "Ammar Tareen", email = "tareen@cshl.edu"},
    {name = "Justin B. Kinney", email = "jkinney@cshl.edu"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["Sequence Logos"]
dependencies = [
    "numpy",
    "matplotlib>=2.2.2",
    "pandas"
]

[project.urls]
Homepage = "http://logomaker.readthedocs.io"
Documentation = "https://logomaker.readthedocs.io"
Repository = "https://github.com/jbkinney/logomaker"

[tool.setuptools]
packages = ["logomaker", "logomaker.tests"]
include-package-data = true